Pivot to Cloudflare R2 for data storage
🚀 Major Architecture Improvement:
- Replace complex GitHub Pages orphan branch with simple R2 uploads
- Add comprehensive R2 setup guide and documentation
- Update script to upload data directly to R2 (no git commits needed)
- Modify website to fetch data from R2 with fallback to local
- Simplify GitHub Actions workflow (no more complex branch switching)

Benefits:
✅ Zero build triggers for data updates
✅ Instant data availability after sync
✅ Global CDN via Cloudflare edge network
✅ Simpler architecture and maintenance
✅ Better performance and reliability

See R2_SETUP.md for configuration instructions.

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,13 @@ TIMEZONE=Australia/Sydney
 
 # Optional: Healthchecks.io monitoring URL for cron job monitoring
 HEALTHCHECKS_URL=https://hc-ping.com/your-healthcheck-uuid-here
+
+# Cloudflare R2 Configuration (see R2_SETUP.md for detailed setup guide)
+# Replace 'your-account-id' with your actual Cloudflare account ID
+R2_ENDPOINT_URL=https://your-account-id.r2.cloudflarestorage.com
+R2_ACCESS_KEY_ID=your-r2-access-key-here
+R2_SECRET_ACCESS_KEY=your-r2-secret-key-here
+R2_BUCKET_NAME=step-tracker
+
+# Optional: Custom R2 domain (if you set up a custom domain for your bucket)
+# R2_PUBLIC_URL=https://data.yourdomain.com
