--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "gitpython>=3.1.45",
     "python-dotenv>=1.2.1",
     "requests>=2.31.0",
+    "boto3>=1.35.0",
 ]
 
 [project.optional-dependencies]
